crates/rattler_build_diffy/src/patch/snapshots/rattler_build_diffy__patch__parse__tests__real_world_patches@nested.patch.snap
---
source: crates/rattler_build_diffy/src/patch/parse.rs
expression: patches
input_file: crates/rattler_build_diffy/src/patch/test-data/nested.patch
---
Ok(
    [
        Patch {
            original: Some(
                Filename(
                    "a/src/lib/hello.txt",
                ),
            ),
            modified: Some(
                Filename(
                    "b/src/lib/hello.txt",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 0,
                        len: 0,
                    },
                    new_range: HunkRange {
                        start: 1,
                        len: 1,
                    },
                    function_context: None,
                    lines: [
                        Insert(
                            "hello world\n",
                        ),
                    ],
                },
            ],
        },
    ],
)
