crates/rattler_build_diffy/src/patch/snapshots/rattler_build_diffy__patch__parse__tests__real_world_patches@simple.patch.snap
---
source: crates/rattler_build_diffy/src/patch/parse.rs
expression: patches
input_file: crates/rattler_build_diffy/src/patch/test-data/simple.patch
---
Ok(
    [
        Patch {
            original: Some(
                Filename(
                    "hello.txt",
                ),
            ),
            modified: Some(
                Filename(
                    "hello.txt",
                ),
            ),
            hunks: [
                Hunk {
                    old_range: HunkRange {
                        start: 0,
                        len: 0,
                    },
                    new_range: HunkRange {
                        start: 1,
                        len: 1,
                    },
                    function_context: None,
                    lines: [
                        Insert(
                            "hello world\n",
                        ),
                    ],
                },
            ],
        },
    ],
)
